# bankstatementparser

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  README.md  SECURITY.md  TEMPLATE.md  VULNERABILITY_REPORTING.md  codecov.yml  mise.toml  mkdocs.yml  plan.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.githooks/: pre-commit
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  settings.yml
.github/workflows/: ci.yml  commit-signature-verification.yml  docs.yml  pypi-publish.yml  quality-gates.yml  release-integrity.yml  security.yml
bankstatementparser/: __init__.py  _amounts.py  _llm_common.py  additional_parsers.py  api.py  bank_statement_parsers.py  base_parser.py  camt_parser.py  cli.py  exceptions.py  input_validator.py  pain001_parser.py  parallel.py  record_types.py  transaction_deduplicator.py  transaction_models.py  zip_security.py
bankstatementparser/enrichment/: __init__.py  account_mapper.py  categorizer.py
bankstatementparser/export/: __init__.py  ledger.py
bankstatementparser/hybrid/: __init__.py  evaluation.py  llm_extractor.py  ollama_direct.py  orchestrator.py  pdf_text.py  prompts.py  scanner.py  verification.py  vision.py
docs/: MAPPING.md  index.md
docs/api/: additional_parsers.md  api.md  bank_statement_parsers.md  base_parser.md  camt_parser.md  cli.md  enrichment.md  exceptions.md  export.md  hybrid.md  input_validator.md  pain001_parser.md  parallel.md  record_types.md  transaction_deduplicator.md  transaction_models.md  zip_security.md
docs/compliance/: CHANGE_CONTROL_PROCEDURE.md  RISK_REGISTER.md  SECURE_PATH_TO_PRODUCTION.md  SOFTWARE_VALIDATION_PROCEDURE.md  SOUP_REGISTER.md  TRACEABILITY_MATRIX.md
examples/: README.md  cli_examples.sh  common.py  compatibility_wrappers.py  export_camt.py  export_camt_excel.py  export_pain001.py  inspect_camt.py  parse_camt_basic.py  parse_camt_from_string.py  parse_camt_zip.py  parse_detected_formats.py  parse_pain001_basic.py  stream_camt.py  stream_pain001.py  validate_input.py
examples/hybrid/: 01_smart_ingest_deterministic.py  02_smart_ingest_text_llm.py  03_smart_ingest_vision.py  04_golden_rule.py  05_dedupe_recurring.py  06_cli_walkthrough.ps1  06_cli_walkthrough.sh  07_scan_and_ingest.py  README.md  generate_sample_pdfs.py
scripts/: generate_checksums.py  generate_sbom.py  run_llm_eval.py  verify_github_commit_signatures.py  verify_locked_hashes.py
tests/: test_ pain001_parser.py  test_account_mapper.py  test_additional_parsers.py  test_amounts.py  test_api.py  test_bank_statement_parsers.py  test_benchmark_suite.py  test_branch_coverage.py  test_camt_parser.py  test_cli.py  test_coverage_gaps.py  test_docs_accuracy.py  test_edge_cases.py  test_enrichment_categorizer.py  test_enterprise_coverage.py  test_error_paths.py  test_export_ledger.py  test_golden_files.py  test_hybrid_cli.py  test_hybrid_dedupe_by_hash.py  test_hybrid_evaluation.py  test_hybrid_llm_extractor.py  test_hybrid_ollama_direct.py  test_hybrid_orchestrator.py  test_hybrid_pdf_text.py  test_hybrid_review_cli.py  test_hybrid_verification.py  test_hybrid_vision.py  test_input_validator.py  test_large_file_streaming.py  test_llm_common.py  test_multi_currency_verification.py  test_pain001_parser.py  test_parser_edge_behavior.py  test_performance.py  test_performance_contracts.py  test_pii_redaction.py  test_polars_export.py  test_property_based.py  test_regression_docs.py  (+6 more)
tests/integration/: __init__.py  test_euxis_dispatch.py  test_euxis_dispatch_edge_cases.py  test_euxis_dispatch_performance.py  test_euxis_dispatch_runner.py  test_malformed_data.py  test_security_boundaries.py  test_supply_chain_tools.py  test_zip_security.py
tests/integration/test_manifests/: complex_dependencies.json  modern_staged.json  simple_legacy.json
tests/test_data/: camt_file.csv  invalid.xml  pain_file.csv  sample.mt940  sample.ofx  sample.qfx  sample_split_amounts.csv  sample_statement.csv
tests/test_data/eval/: european_format.json  same_day_duplicates.json  single_currency_checking.json
tests/test_data/golden/: camt053_duplicate_same_day.xml  camt053_garbled_amount.xml  camt053_multicurrency.xml  camt053_no_namespace.xml  csv_european_decimals.csv  csv_french_headers.csv  csv_garbled_amount.csv  csv_spanish_headers.csv
