[tool.poetry]
name = "bankstatementparser"
version = "0.0.7"
description = "BankStatementParser is your essential tool for easy bank statement management. Designed with finance and treasury experts in mind, it offers a simple way to handle CAMT (ISO 20022) formats and more. Get quick, accurate insights from your financial data and spend less time on processing. It's the smart, hassle-free way to stay on top of your transactions."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache Software License"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/bankstatementparser"
homepage = "https://bankstatementparser.com"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
lxml = ">=4.9.3"
openpyxl = "^3.1.5"
pandas = "^2.3.3"
defusedxml = "^0.7.1"
pydantic = "^2.11.0"
polars = {version = "^1.32.0", optional = true}
litellm = {version = ">=1.83.0", optional = true}
pypdf = {version = ">=4.0.0", optional = true}
pdfplumber = {version = ">=0.11.0", optional = true}
pypdfium2 = {version = ">=4.30.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^7.1.0"
pytest-benchmark = "^5.1.0"
ruff = "^0.15.7"
mypy = "^1.5.0"
bandit = "^1.7.0"
hypothesis = ">=6.82,<7"

[tool.poetry.extras]
polars = ["polars"]
hybrid = ["litellm", "pypdf"]
hybrid-plus = ["litellm", "pypdf", "pdfplumber"]
hybrid-vision = ["litellm", "pypdf", "pypdfium2"]

[tool.poetry.scripts]
bankstatementparser = "bankstatementparser.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 72
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 72
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_first_party = "bankstatementparser"

[tool.ruff]
target-version = "py310"
line-length = 72
src = ["bankstatementparser", "tests", "examples", "scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",
    # UP007 + UP045 — Optional[X] / Union[X, Y] are kept verbatim
    # for now. Migrating ~100 occurrences to the PEP 604 `X | None`
    # / `X | Y` syntax is a deliberate follow-up cleanup PR after
    # v0.0.6 ships, not part of the Python-3.9 retirement work.
    "UP007",
    "UP045",
]

[tool.ruff.lint.isort]
known-first-party = ["bankstatementparser"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["lxml.*", "pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["defusedxml", "defusedxml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["polars", "polars.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["litellm", "litellm.*", "pypdf", "pypdf.*", "pdfplumber", "pdfplumber.*", "pypdfium2", "pypdfium2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tomli", "tomllib"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "setup"]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "--cov=bankstatementparser --cov-report=term-missing --cov-report=xml --cov-fail-under=100"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow-running performance or regression checks",
]

[tool.coverage.run]
source = ["bankstatementparser"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
