[tool.poetry]
name = "bankstatementparser"
version = "0.0.11"
description = "BankStatementParser is your essential tool for easy bank statement management. Designed with finance and treasury experts in mind, it offers a simple way to handle CAMT (ISO 20022) formats and more. Get quick, accurate insights from your financial data and spend less time on processing. It's the smart, hassle-free way to stay on top of your transactions."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache Software License"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/bankstatementparser"
homepage = "https://bankstatementparser.com"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
lxml = ">=5.0"
openpyxl = {version = "^3.1.5", optional = true}
pandas = "^2.3.3"
defusedxml = "^0.7.1"
pydantic = "^2.11.0"
polars = {version = "^1.32.0", optional = true}
litellm = {version = ">=1.83.10", optional = true, python = "<3.14"}
pypdf = {version = ">=4.0.0", optional = true}
pdfplumber = {version = ">=0.11.0", optional = true}
pypdfium2 = {version = ">=4.30.0", optional = true}
fastapi = {version = ">=0.115.0", optional = true}
uvicorn = {version = ">=0.34.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<10.0.0"
pytest-cov = "^7.1.0"
pytest-benchmark = "^5.1.0"
ruff = "^0.15.7"
mypy = ">=1.5,<3"
bandit = "^1.7.0"
hypothesis = ">=6.82,<7"
interrogate = "^1.7.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5"
mkdocstrings = {version = ">=0.27", extras = ["python"]}

[tool.poetry.extras]
excel = ["openpyxl"]
polars = ["polars"]
hybrid = ["litellm", "pypdf"]
hybrid-plus = ["litellm", "pypdf", "pdfplumber"]
hybrid-vision = ["litellm", "pypdf", "pypdfium2"]
enrichment = ["litellm"]
api = ["fastapi", "uvicorn"]

[tool.poetry.scripts]
bankstatementparser = "bankstatementparser.cli:main"
bankstatementparser-api = "bankstatementparser.api:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 72
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 72
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_first_party = "bankstatementparser"

[tool.ruff]
target-version = "py310"
line-length = 79
src = ["bankstatementparser", "tests", "examples", "scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit
    "PIE",    # flake8-pie
    "D",      # pydocstyle — enforced on the package only (see
              # per-file-ignores); google convention below
]
# The multiplication sign is used deliberately in docstrings for
# image dimensions (336×336) and render scales (1×, 2×).
allowed-confusables = ["×"]
ignore = [
    "E501",
    # UP007 + UP045 — Optional[X] / Union[X, Y] are kept verbatim
    # for now. Migrating ~100 occurrences to the PEP 604 `X | None`
    # / `X | Y` syntax is a deliberate follow-up cleanup PR after
    # v0.0.6 ships, not part of the Python-3.9 retirement work.
    "UP007",
    "UP045",
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use assert, hardcoded temp paths, and pickle-free
# mock data; S-rules target production code. SIM117: nested
# `with patch(...)` blocks are the established unittest idiom here.
# D (docstring completeness) is a public-API contract — enforced on
# the package, not on tests/examples/scripts.
"tests/**" = ["S", "SIM117", "D"]
"examples/**" = ["S", "D"]
"scripts/**" = ["S", "D"]

[tool.ruff.lint.isort]
known-first-party = ["bankstatementparser"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["lxml.*", "pandas.*", "openpyxl", "openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["defusedxml", "defusedxml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["polars", "polars.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["litellm", "litellm.*", "pypdf", "pypdf.*", "pdfplumber", "pdfplumber.*", "pypdfium2", "pypdfium2.*", "httpx", "httpx.*", "fastapi", "fastapi.*", "uvicorn", "uvicorn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tomli", "tomllib"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "setup"]
ignore_errors = true

[tool.pytest.ini_options]
# Full coverage is enforced; genuinely unreachable defensive code
# carries an explicit, justified "# pragma: no cover".
addopts = "--cov=bankstatementparser --cov-report=term-missing --cov-report=xml --cov-fail-under=100 -m \"not slow\""
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow-running performance or regression checks",
]

[tool.interrogate]
# Documentation coverage is enforced at 100% across the package, the
# developer/CI helper scripts, and the runnable examples. Test modules
# and the local virtualenv are excluded; everything else — including
# private and nested helpers — must carry a docstring.
fail-under = 100
ignore-init-method = true
ignore-magic = true
ignore-module = false
ignore-private = false
ignore-nested-functions = false
ignore-semiprivate = false
exclude = [
    ".venv",
    "build",
    "dist",
    "tests",
    "setup.py",
    "docs",
]
verbose = 1

[tool.coverage.run]
source = ["bankstatementparser"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
